<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>clap_b7_driver</name>
  <version>1.0.0</version>
  <description>Clap B7 driver</description>
  <maintainer email="elaydin@robeff.com">elaydin</maintainer>
  <license>MIT LICENSE</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>autoware_cmake</buildtool_depend>

  <depend>ament_cmake </depend>
  <depend>rclcpp </depend>
  <depend>std_msgs </depend>
  <depend>sensor_msgs </depend>
  <depend>nav_msgs </depend>
  <depend>geometry_msgs </depend>
  <depend>tf2_ros </depend>
  <depend>tf2_msgs </depend>
  <depend>tf2_geometry_msgs </depend>
  <depend>rosidl_default_generators </depend>
  <depend>mavros_msgs </depend>
  <depend>autoware_sensing_msgs </depend>
  <depend>Eigen3 </depend>



  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
